Fix text color to view properly on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -391,7 +391,8 @@ img {
   }
 
   .titleSpotify {
-    margin-top: 4em;
+    margin-top: 2em;
+    color: white;
   }
 
   .countdown {
